force-app/main/default/objects/pdffiller_sfree__Flow_Condition__c/pdffiller_sfree__Flow_Condition__c.object-meta.xml
<CustomObject>
    <label>Flow Condition</label>
    <nameField>
        <label>Flow Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>