force-app/main/default/objects/pdffiller_sfree__Flow_Condition__c/fields/pdffiller_sfree__Field_Conditions__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Field_Conditions__c</fullName>
    <label>Field Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>