force-app/main/default/objects/pdffiller_sfree__Flow_Condition__c/fields/pdffiller_sfree__Flow_ID__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Flow_ID__c</fullName>
    <label>Flow ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>