force-app/main/default/objects/pdffiller_sfree__Flow_Condition__c/fields/pdffiller_sfree__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>